web/themes/custom/cloudy/src/components/_form.scss
/* ... */
// START Cloudy-specific components

.form-inline label {
  justify-content: left;
}

.form-inline .form-group {
  margin-right: $cloudy-space-4;
}

.form-inline .form-actions,
.container-inline .form-actions {
  align-items: bottom !important;
}

select.form-select {
  @extend .form-control;
  border-radius: 0.125rem;
  // We are adding max-width here to protect against situations where long select options would otherwise break out
  // of their parent container due to natural layout flow. Adding max-width here ensures our select will not disturb
  // the layout in floated situations. (e.g. select filter in a right-hand sidebar layout)
  max-width: 100%;
}

.views-exposed-form form {
  margin-bottom: $cloudy-space-8;
}

.views-exposed-form .form-actions {
  @extend .align-self-end;
}

form .description p,
.webform-element-description p {
  font-size: $font-size-sm !important;
  margin-bottom: 0;
}

.webform-element-description,
form .description,
form .counter {
  display: block;
  font-size: $font-size-sm !important;
  margin-bottom: $cloudy-space-4;
}

label {
  display: table;
  font-weight: $font-weight-semibold;
  margin-bottom: 0;
}

fieldset legend {
  font-size: 1rem !important;
  font-weight: $font-weight-semibold !important;
}

.entity-content-form-footer {
  border: $border-width solid $cloudy-color-neutral-200;
  padding: ($cloudy-space-4 * 1.5);
  margin-bottom: ($cloudy-space-4 * 2) !important;
  background-color: $cloudy-color-neutral-200;
}

/* fix for superfluous label colons in entity embed alignment form, bad alignment and mismatched label bolding */
.form-item-attributes-data-align label:after,
.form-item-attributes-data-align .label:after {
  content: none !important;
}
.form-item-attributes-data-align label {
  margin-right: 10px;
}
.form-item-attributes-data-caption label {
  font-weight: bold;
}

/* put a little padding in styled CKEditor body */
.cke_editable {
  margin: 10px;
}

// Form control
.view-filters {
  margin-bottom: $cloudy-space-8;
}

.form--inline {
  display: flex;
}

.form--inline .form-item {
	margin-right: $cloudy-space-4;
	display: inline;
  max-width: 100%; // We are adding a harmless max-width here to protect against floating items breaking outside their parent
  // We target inputs with the `size` attribute here so that they respect our layout's margins and not overflow the layout
  input[size] {
    width: 100%;
  }
}
.form-control {
  border-radius: 0.125rem;
}

.invalid-feedback {
  display: inherit;
}

// entity embed dialog

.entity-embed-dialog-step--embed .form-element-container {
  width: 150px;
  float: left;
  display: block;
}
.entity-embed-dialog-step--embed .container-inline div {
  display: block;
}

// exposed filter forms

div.date-links {
  flex-basis: 100%;
  margin-bottom: 30px;
}
span.prev-link {
  margin-right: 30px;
}
span.next-link .fas {
  margin: 0 0 0 $cloudy-space-2;
}

/* admin content/media view tables */
.view-admin-group-content .form-check,
.view-my-content .form-check,
.view-my-media .form-check,
.views-table .form-check {
  padding-left: 0;
  margin-top: 0;
}
.view-admin-group-content .dropbutton-multiple,
.view-my-content .dropbutton-multiple,
.view-my-media .dropbutton-multiple,
.views-table .dropbutton-multiple {
  margin-right: 2em !important;
  padding-right: 3em !important;
}
.view-admin-group-content table .form-item,
.view-my-content table .form-item,
.view-my-media table .form-item .views-table table .form-item {
  margin-top: 0;
}

// Chosen form overrides
.chosen-container-single {
  .chosen-single {
    padding-left: $cloudy-space-4 * 0.75;
  }
}

.chosen-container-multi {
  .chosen-choices {
    padding: ($cloudy-space-4 * 0.375) ($cloudy-space-4 * 0.75);
    li.search-choice {
      padding: ($cloudy-space-4 * 0.375) ($cloudy-space-4 * 1.5) ($cloudy-space-4 * 0.375) ($cloudy-space-4 * 0.75);
      display: flex;
      align-items: center;
      .search-choice-close {
        top: $cloudy-space-4 * 0.5;
        right: $cloudy-space-4 * 0.25;
      }
    }
  }
}

/* Calendar Item content type node form; compact class set in the form display container element. */
div.compact > div {
  width: 49.5%;
  display: inline-block;
}

// Facets
.facets-widget {
  &-checkbox {
    padding: $cloudy-space-4;
    background: $cloudy-color-neutral-200;
    ul {
      list-style: none;
      margin-bottom: 0;
      padding: 0;
    }
  }
}

.facet-item {
  @extend .form-check;
  margin-bottom: $cloudy-space-2;
  ul {
    margin-top: $cloudy-space-2;
  }
}

.facet-item label {
  display: inline-block;
  margin: 0;
  font-weight: normal;
}

.facet-item input.facets-checkbox {
  position: absolute;
  margin-top: 0.3rem;
  margin-left: -$cloudy-space-5;
}

.facet-empty {
  display: none;
}

.form-wrapper {
  margin: 0 0 $cloudy-space-4;
}

.field-group-accordion-wrapper {
  margin: 0 0 $cloudy-space-8;
}

.region-tools .form-text,
.region-tools .form-select {
  max-width: 255px;
}

// End Cloudy-specific components

// Webform

.form-number, .form-textarea-wrapper {
  margin-top: 0.4em;
}

.webform-alert h2 {
  margin-top: 0 !important;
}

.webform-required {
  margin-bottom: 1rem;
}

img.inline-icon {
  height: 20px;
}

fieldset#edit-support-agent-use-only--wrapper {
  padding: 15px;
  background-color: #cccccc;
}

